--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.2.5",
+    "axios": "^0.21.1",
     "redux": "4.0",
     "redux-devtools-extension": "^2.13.9",
     "reselect": "^4.0.0"
