--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "1.2.5",
     "axios": "^0.21.1",
+    "moment": "^2.29.1",
     "redux": "4.0",
     "redux-devtools-extension": "^2.13.9",
     "reselect": "^4.0.0"
