Add create-react-app files

--- a/package.json
+++ b/package.json
@@ -1,25 +1,51 @@
 {
   "name": "redux-starter",
   "version": "1.0.0",
+  "private": true,
   "description": "Redux Starter Project",
-  "main": "index.js",
+  "author": "Sunny",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "redux-store:start": "webpack-dev-server --config ./webpack.config.js"
   },
   "keywords": [],
-  "author": "Mosh Hamedani",
-  "license": "ISC",
-  "devDependencies": {
-    "webpack": "4.41.6",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-server": "3.10.3"
-  },
   "dependencies": {
     "@reduxjs/toolkit": "1.2.5",
+    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "moment": "^2.29.1",
-    "redux": "4.0",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "react": "^17.0.2",
     "redux-devtools-extension": "^2.13.9",
-    "reselect": "^4.0.0"
+    "redux": "4.0",
+    "reselect": "^4.0.0",
+    "web-vitals": "^1.1.2"
+  },
+  "devDependencies": {
+    "webpack-cli": "3.3.11"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
