--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "moment": "^2.29.1",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "react": "^17.0.2",
-    "redux-devtools-extension": "^2.13.9",
+    "react-dom": "^17.0.2",
+    "react-redux": "7.2",
+    "react-scripts": "4.0.3",
     "redux": "4.0",
+    "redux-devtools-extension": "^2.13.9",
     "reselect": "^4.0.0",
     "web-vitals": "^1.1.2"
   },
