--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/plugin-transform-runtime": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "axios-mock-adapter": "^1.19.0",
     "webpack-cli": "3.3.11"
   },
   "eslintConfig": {
