--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "5.0.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
     "react-redux": "7.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "4.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-form": "^8.3.7",
     "reselect": "^4.0.0",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
@@ -33,6 +38,7 @@
     "@babel/plugin-transform-runtime": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
     "axios-mock-adapter": "^1.19.0",
+    "prettier": "1.19.1",
     "webpack-cli": "3.3.11"
   },
   "eslintConfig": {
