--- a/package.json
+++ b/package.json
@@ -1,63 +1,67 @@
 {
-  "name": "redux-starter",
-  "version": "1.0.0",
-  "private": true,
-  "description": "Redux Starter Project",
-  "author": "Sunny",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "redux-store:start": "webpack-dev-server --config ./webpack.config.js"
-  },
-  "keywords": [],
-  "dependencies": {
-    "@reduxjs/toolkit": "1.2.5",
-    "@testing-library/jest-dom": "^5.13.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
-    "bootstrap": "5.0.2",
-    "js-cookie": "^3.0.0",
-    "moment": "^2.29.1",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.4",
-    "react-dom": "^17.0.2",
-    "react-redux": "7.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "redux": "4.0",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-form": "^8.3.7",
-    "reselect": "^4.0.0",
-    "styled-components": "^5.3.0",
-    "web-vitals": "^1.1.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/plugin-transform-runtime": "^7.14.3",
-    "@babel/preset-env": "^7.14.4",
-    "axios-mock-adapter": "^1.19.0",
-    "prettier": "1.19.1",
-    "webpack-cli": "3.3.11"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+   "name": "bug-tracker-mern-stack",
+   "homepage": "http://sunnymopada.github.io/bug-tracker-mern-stack",
+   "version": "1.0.0",
+   "private": true,
+   "description": "Bug Tracker MERN Stack",
+   "author": "Sunny",
+   "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject",
+      "redux-store:start": "webpack-dev-server --config ./webpack.config.js",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build"
+   },
+   "keywords": [],
+   "dependencies": {
+      "@reduxjs/toolkit": "1.2.5",
+      "axios": "^0.21.1",
+      "bootstrap": "5.0.2",
+      "js-cookie": "^3.0.0",
+      "moment": "^2.29.1",
+      "react": "^17.0.2",
+      "react-bootstrap": "^2.0.0-beta.4",
+      "react-dom": "^17.0.2",
+      "react-redux": "7.2",
+      "react-router-dom": "^5.2.0",
+      "react-scripts": "4.0.3",
+      "redux": "4.0",
+      "redux-devtools-extension": "^2.13.9",
+      "redux-form": "^8.3.7",
+      "reselect": "^4.0.0",
+      "styled-components": "^5.3.0",
+      "web-vitals": "^1.1.2"
+   },
+   "devDependencies": {
+      "@babel/core": "^7.14.3",
+      "@babel/plugin-transform-runtime": "^7.14.3",
+      "@babel/preset-env": "^7.14.4",
+      "@testing-library/jest-dom": "^5.13.0",
+      "@testing-library/react": "^11.2.7",
+      "@testing-library/user-event": "^12.8.3",
+      "axios-mock-adapter": "^1.19.0",
+      "gh-pages": "^3.2.3",
+      "prettier": "1.19.1",
+      "webpack-cli": "3.3.11"
+   },
+   "eslintConfig": {
+      "extends": [
+         "react-app",
+         "react-app/jest"
+      ]
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   }
 }
