--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
    "author": "Sunny",
    "scripts": {
       "start": "react-scripts start",
-      "build": "react-scripts build",
+      "build": "react-scripts build && cp build/index.html build/404.html",
       "test": "react-scripts test",
       "eject": "react-scripts eject",
       "redux-store:start": "webpack-dev-server --config ./webpack.config.js",
